--- a/cornermorph.html
+++ b/cornermorph.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>Off-Canvas Menu Effects - Top Side</title>
+		<title>Off-Canvas Menu Effects - Corner Morph</title>
 		<meta name="description" content="Modern effects and styles for off-canvas navigation with CSS transitions and SVG animations using Snap.svg" />
 		<meta name="keywords" content="sidebar, off-canvas, menu, navigation, effect, inspiration, css transition, SVG, morphing, animation" />
 		<meta name="author" content="Codrops" />
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/menu_topside.css" />
+		<link rel="stylesheet" type="text/css" href="css/menu_cornermorph.css" />
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -20,23 +20,22 @@
 	<body>
 		<div class="container">
 			<div class="menu-wrap">
-				<nav class="menu-top">
+				<nav class="menu">
 					<div class="profile"><img src="img/user1.png" alt="Matthew Greenberg"/><span>Matthew Greenberg</span></div>
+					<div class="link-list">
+						<a href="#"><span>Latest stories</span></a>
+						<a href="#"><span>Your friends</span></a>
+						<a href="#"><span>Personal Settings</span></a>
+						<a href="#"><span>Security &amp; Privacy</span></a>
+					</div>
 					<div class="icon-list">
-						<a href="#"><i class="fa fa-fw fa-star-o"></i></a>
-						<a href="#"><i class="fa fa-fw fa-bell-o"></i></a>
-						<a href="#"><i class="fa fa-fw fa-envelope-o"></i></a>
-						<a href="#"><i class="fa fa-fw fa-comment-o"></i></a>
+						<a href="#"><i class="fa fa-fw fa-home"></i></a>
+						<a href="#"><i class="fa fa-fw fa-question-circle"></i></a>
+						<a href="#"><i class="fa fa-fw fa-power-off"></i></a>
 					</div>
 				</nav>
-				<nav class="menu-side">
-					<a href="#">Recent Stories</a>
-					<a href="#">Reading List</a>
-					<a href="#">My Stories</a>
-					<a href="#">Categories</a>
-				</nav>
 			</div>
-			<button class="menu-button" id="open-button">Open Menu</button>
+			<button class="menu-button" id="open-button"><i class="fa fa-fw fa-cog"></i><span>Open Menu</span></button>
 			<div class="content-wrap">
 				<div class="content">
 					<header class="codrops-header">
@@ -46,17 +45,16 @@
 						</div>
 						<h1>Off-Canvas Menu Effects <span>Showing (off-canvas) menus stylishly</span></h1>
 						<nav class="codrops-demos">
-							<a class="current-demo" href="index.html">Top Side</a>
+							<a href="index.html">Top Side</a>
 							<a href="sideslide.html">Side Slide</a>
 							<a href="cornerbox.html">Corner Box</a>
 							<a href="cornerbox_nested.html">Nested Corner Box</a>
 							<a href="topexpand.html">Top Expand</a>
-							<a href="cornermorph.html">Corner Morph</a>
+							<a class="current-demo" href="cornermorph.html">Corner Morph</a>
 							<a href="elastic.html">Elastic</a>
 							<a href="bubble.html">Bubble</a>
 							<a href="wave.html">Wave</a>
 						</nav>
-						<p>Based on the <a href="https://dribbble.com/shots/1663008-Old-Designspiration-Menu-Concept">Dribble shot by Michael Martinho</a></p>
 					</header>
 					<!-- Related demos -->
 					<section class="related">
